Small random changes to gui component