@@ -1,6 +1,5 @@
 package fr.max2.betterconfig.client.gui.component;
 
-import java.util.Arrays;
 import java.util.List;
 
 public interface IDelegateComponent extends ICompositeComponent
@@ -10,6 +9,6 @@ public interface IDelegateComponent extends ICompositeComponent
 	@Override
 	default List<? extends IComponent> getChildren()
 	{
-		return Arrays.asList(this.getChild());
+		return List.of(this.getChild());
 	}
 }
